Daniel: removed all pictures and moved them to the cloud

--- a/daniel/week2/task1/CONFIRMED.html
+++ b/daniel/week2/task1/CONFIRMED.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3">
     <link rel="stylesheet" type="text/css" href="./css/confirmed_style.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +15,7 @@
         <main>
             <div class="container">
             <h1 class="center">Confirmed! :) &#128519;</h1>
-            <img class= "container" src="./images/checkmark-png-25951.png" alt = "checkmark" style="width: 100%"/>  <!--TODO: Make me smaller and centered-->
+            <img class= "container" src="https://drive.google.com/uc?export=view&id=1LBiZOJEWW-P6T3SJl9GXX0XJLla9oJCG" alt = "checkmark" style="width: 100%"/>  <!--TODO: Make me smaller and centered-->
             </div>
             <div class="container center">
                 <a href="homepage.html" class="waves-effect waves-light pulse btn-large light-green accent-3 black-text">Back to Homepage</a>
