--- a/daniel/week2/task1/CONTACTME.html
+++ b/daniel/week2/task1/CONTACTME.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3">
     <link rel="stylesheet" type="text/css" href="./css/contactme_style.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="navbar-fixed">
     <nav class="nav-wrapper indigo">
         <div class="container">
-                <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
+                <a class="brand-logo left "><img src="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3"></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="homepage.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Home</a></li>
                 <li><a href="catalog.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Catalog</a></li>
