--- a/daniel/week2/task1/HOMEPAGE.html
+++ b/daniel/week2/task1/HOMEPAGE.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3">
     <link rel="stylesheet" type="text/css" href="./css/homepage_style.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,10 +13,9 @@
   </head>
 
   <body class="light-blue lighten-5">
-    <div class="navbar-fixed">
-    <nav class="nav-wrapper indigo">
+    <div class="navbar-fixed"--------:wq class="nav-wrapper indigo">
         <div class="container">
-            <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
+            <a class="brand-logo left "><img src="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3"></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="homepage.html" class="waves-effect waves-light pulse btn-small light-green accent-3 black-text">Home</a></li> 
                 <li><a href="catalog.html" class="waves-effect waves-light  btn-small light-green accent-3 black-text">Catalog</a></li>
@@ -26,7 +25,6 @@
         </div>
     </nav>
     </div>
-    <main>
     <div class="wrapper">
             <h2 class = " red darken-4 white-text">Dota 2</h2>
             <span class="main">
@@ -46,7 +44,7 @@
                 Steam guard/authenticator will safeguard your inventory at all times. There is no way someone can take any of your
                 items without access to your phone.
             </span>
-            <aside class="logo logo " ><img src = "./images/logo_dota.png"></aside>
+            <aside class="logo logo " ><img src = "https://drive.google.com/uc?export=view&id=1dffAOlfP-9b9Fgv4e391_Utibyx0uWF4"></aside>
         </div>
         <div class="wrapper">
             <h2 class = "yellow accent-3  black-text">Counter Strike: Global Offensive</h2>
@@ -64,14 +62,14 @@
                         Steam guard/authenticator will safeguard your inventory at all times. There is no way someone can take any of your
                         items without access to your phone.
                 </span>
-            <aside class="logo logo"><img src="./images/csgo_logo.jpg"></aside>
+            <aside class="logo logo"><img src="https://drive.google.com/uc?export=view&id=1BpD_ZGle30PCfx8CMz4nJLoyHbR4mTcm"></aside>
         </div>
         <div class="wrapper">
             <h2 class = "indigo darken-3  light-green-text text-accent-3">World of Warcraft</h2>
                 <span class="main">
                     <p>World of Warcraft started its journey almost 15 years ago, and Classic is an authentic recreation of the game state back then. It is a cruel and sometimes frustrating old-school MMO that shall be brought back by Blizzard on 27th of August, 2019. We bet you already know everything about this game, so should you wish to skip running on your feet until level 40, grinding mobs or corpserunning through STV, our wow classic boost service is here to get you rid of it.</p>
                 </span>
-            <aside class="logo logo"><img src = "./images/wow_logo.jpg"></aside>
+            <aside class="logo logo"><img src = "https://drive.google.com/uc?export=view&id=1Gz7_-4gG1lrVzEoRwGP-EUpQ7l3G0sRP"></aside>
         </div>
         </main>
         <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
