--- a/daniel/week2/task1/ABOUTME.html
+++ b/daniel/week2/task1/ABOUTME.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3">
     <link rel="stylesheet" type="text/css" href="./css/aboutme_style.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
     <div class="navbar-fixed">
     <nav class="nav-wrapper indigo">
         <div class="container">
-                <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
+                <a class="brand-logo left "><img src="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3"></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="homepage.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Home</a></li>
                 <li><a href="catalog.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Catalog</a></li>
@@ -40,7 +40,7 @@
                             <li>Reaching Global Elite in CSGO - playtime: 6000+ hours.</li>
                         </ul>    
                     </span>
-                <aside class="logo logo"><img src = "./images/profilepic.jpeg" class="profile"></aside>
+                <aside class="logo logo"><img src = "https://drive.google.com/uc?export=view&id=1xN50BDoyPPYYxYMISqvtetAG9Dzr4kC-" class="profile"></aside>
             </div>
         </main>
         <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
