--- a/daniel/week2/task1/CATALOG.html
+++ b/daniel/week2/task1/CATALOG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3">
     <link rel="stylesheet" type="text/css" href="./css/catalog_style.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
     <div class="navbar-fixed">
     <nav class="nav-wrapper indigo">
         <div class="container">
-                <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
+                <a class="brand-logo left "><img src="https://drive.google.com/uc?export=view&id=1h-6r6_GyQyb-1qoNUzn3tYUVgr4SNSt3"></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="homepage.html" class="waves-effect waves-light btn-small light-green accent-3 black-text ">Home</a></li>
                 <li><a href="catalog.html" class="waves-effect waves-light pulse btn-small light-green accent-3 black-text">Catalog</a></li>
@@ -40,7 +40,7 @@
                 <input id="type1" type="submit" value="ORDER">
                 </form>
                 </article>
-            <aside class="logo logo"><img src = "./images/catalog1.png"></aside>
+            <aside class="logo logo"><img src="https://drive.google.com/uc?export=view&id=15xL-0MAiSEV8nIE8mkc7OueYcdd1lcai"></aside>
         </div>
         <div class="wrapper">
                 <h2 class = "yellow accent-3  black-text">Counter Strike: Global Offensive services</h2>
@@ -55,7 +55,7 @@
                     <input id="type2" type="submit" value="ORDER">
                     </form>
                     </article>
-                <aside class="logo logo"><img src = "./images/catalog2.png"></aside>
+                <aside class="logo logo"><img src="https://drive.google.com/uc?export=view&id=1hs1SBMsF0l8q8bIosPnxNls7jORFdM3A"></aside>
             </div>
             <div class="wrapper" >
                     <h2 class = "indigo darken-3  light-green-text text-accent-3" >World of Warcraft services</h2>
@@ -64,7 +64,7 @@
                         <input id="type3" type="submit" value="ORDER">
                         </form>
                         </article>
-                    <aside class="logo pic3"><img src = "./images/catalog3.png"></aside>
+                    <aside class="logo pic3"><img src="https://drive.google.com/uc?export=view&id=1r9CoyVeZKBKEL8pJw4BccvftrBh_V_H3"></aside>
                 </div>
     </main>
     <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
