Images added to cloud

--- a/ivan/week-1/second_task/index.html
+++ b/ivan/week-1/second_task/index.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
     <header>
-        <img src="images\img-tea-cozy-logo.png" alt="Logo" class="logo">
+        <img src="https://drive.google.com/uc?export=view&id=1b-C8PdbjWmjaj8rD1vOIonVFbSbidrbp" alt="Logo" class="logo">
             <nav>
                 <a href="/mission">Mission</a>
                 <a href="/featured">Featured Tea</a>
@@ -28,23 +28,23 @@
             <h4>What's Steeping at The Tea Cozy?</h4>
             <div class="second-section-container">
                 <div class="second-section-img-text">
-                    <img src="images/img-berryblitz.jpg" alt="Cup with tea" class="second-section-img">
+                    <img src="https://drive.google.com/uc?export=view&id=1vIq8Ix1WTfOM1E3DiRPy8n9aj0UntzV6" alt="Cup with tea" class="second-section-img">
                     <h4 class="second-section-text">Fall Berry Blitz Tea</h4>
                 </div>
                 <div class="second-section-img-text">
-                    <img src="images\img-spiced-rum.jpg" alt="Box with rum" class="second-section-img">
+                    <img src="https://drive.google.com/uc?export=view&id=18DKbxd_91x_ZrBZ087wGNYd6rx9w7uIU" alt="Box with rum" class="second-section-img">
                     <h4 class="second-section-text">Spiced Rum Tea</h4>
                 </div>
                 <div class="second-section-img-text">
-                    <img src="images\img-donut.jpg" alt="Donut with sugar" class="second-section-img">
+                  <img src="https://drive.google.com/uc?export=view&id=1rArvx3dGky6nG66qARHFjO4FL96GkeOT" alt="Donut with sugar" class="second-section-img">
                     <h4 class="second-section-text">Seasonal Donuts</h4>
                 </div>
                 <div class="second-section-img-text">
-                    <img src="images\img-myrtle-ave.jpg" alt="Myrtle ave tea" class="second-section-img">
+                    <img src="https://drive.google.com/uc?export=view&id=1-pYE_TgOJL2fixmsdD_Cr3NR-knOCZxL" alt="Myrtle ave tea" class="second-section-img">
                     <h4 class="second-section-text">Myrtle ave tea</h4>
                 </div>
                 <div class="second-section-img-text">
-                    <img src="images\img-bedford-bizarre.jpg" alt="Bizzare tea" class="second-section-img">
+                    <img src="https://drive.google.com/uc?export=view&id=1AD8IRLNYROSreUxySbtIkXJq8lyRvJ1q" alt="Bizzare tea" class="second-section-img">
                     <h4 class="second-section-text">Bedford Bizzare Tea</h4>
                 </div>
             </div>
