--- a/daniel/week1/task2/index.html
+++ b/daniel/week1/task2/index.html
@@ -40,7 +40,7 @@
     </div>
      
         <div id="container">
-            <img src="img-locations-background.png">
+            <img src="https://drive.google.com/uc?export=view&id=1YDJZd16wVH33BTTvnlAOtHfdZD4E5Xj8">
             <div class="centeredtxt">
                 <h1>Locations</h1>
                 <ul class="blocks">
