Ivan week 2 images moved to the cloud

--- a/ivan/week-2/about.html
+++ b/ivan/week-2/about.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
-    <link rel="icon" href="./images/...." type="image/x-icon">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -17,20 +16,39 @@
       <div class="navigationbar-fixed">
         <nav>
           <div class="nav-wrapper red">
-            <a href="home.html" class="logo">Home</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <a href="home.html" class="logo">
+              Home
+            </a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+              <i class="material-icons">menu</i>
+            </a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="home.html">Home</a></li>
-              <li><a href="catalogue.html">Catalogue</a></li>
-              <li><a href="contact_me.html">Contact Me</a></li>
+              <li>
+                <a href="home.html">Home</a>
+              </li>
+              <li>
+                <a href="catalogue.html">Catalogue</a>
+              </li>
+              <li>
+                <a href="contact_me.html">Contact Me</a>
+              </li>
             </ul>
           </div>
         </nav>
       </div>
       <ul class="sidenav" id="mobile-demo">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="catalogue.html">Catalogue</a></li>
-        <li><a href="contact_me.html">Contact Me</a></li>
+        <li><a href="home.html">
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="catalogue.html">
+            Catalogue
+          </a>
+        </li>
+        <li>
+          <a href="contact_me.html">Contact Me</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -53,7 +71,7 @@
         All were amazed by the Koenigsegg’s outstanding performance. <br>
         The concept worked. It was time to introduce Koenigsegg to prospective buyers.
       </p>
-      <img src="./images/anderstorp-event-koenigsegg.jpg" alt="Anderstorp event Koenigsegg CC">
+      <img src="https://drive.google.com/uc?export=view&id=1AArcY67Bvvpm8OVv6wOxge8LDBQUrBrN" alt="Anderstorp event Koenigsegg CC">
     </main>
     <footer class="page-footer red">
       <div class="footer-copyright">
