--- a/ivan/week-2/catalogue.html
+++ b/ivan/week-2/catalogue.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
-    <link rel="icon" href="./images/...." type="image/x-icon">
     <link rel="stylesheet" href="./css/catalogue.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -37,7 +36,7 @@
       <tr class="display:table-cell">
         <!-- TODO: Make the table into a grid like the tea project. More space between, utilize whole page -->
         <td class="column">
-          <img src="./images/aston-martin-logo.jpg" alt="Aston Martin" class='modal-trigger' href="#modal1">
+          <img src="https://drive.google.com/uc?export=view&id=1Bther9F2llqHh1JyRZEwbGojio8zcDG_" alt="Aston Martin" class='modal-trigger' href="#modal1">
           <!-- TODO:  The class  is the trigger for the modal, href is the indicator for which modal to open based on ID -->
         </td>
 
@@ -53,37 +52,37 @@
         </div>
 
         <td class="row">
-          <img src="./images/bugatti-logo.jpg" alt="Buggati">
+          <img src="https://drive.google.com/uc?export=view&id=1SjN2zCGy0bRP3tcGzMsOXIe6OorQ0uBC" alt="Buggati">
         </td>
         <td class="row">
-          <img src="./images/ferrari-logo.jpg" alt="Ferrari">
+          <img src="https://drive.google.com/uc?export=view&id=1_BUHl4e9BGXY8j832ntBpvDKTLzMehLB" alt="Ferrari">
         </td>
         <td class="row">
-          <img src="./images/hennessey-logo.jpg" alt="Hennesey">
+          <img src="https://drive.google.com/uc?export=view&id=1dq1tNCGPYQkiZ7TVRvSrQkeBbdlqF3SB" alt="Hennesey">
         </td>
         <td class="row">
-          <img src="./images/koenigsegg-logo.jpg" alt="Koenigsegg">
+          <img src="https://drive.google.com/uc?export=view&id=1ZF4C97DhywUP8xVtHjm5toyKs3BB3Zs1" alt="Koenigsegg">
         </td>
         <td class="row">
-          <img src="./images/lamborghini-logo.jpg" alt="Lamborghini">
+          <img src="https://drive.google.com/uc?export=view&id=1K1LIF9JmWwl2iaLjJBm97V-1GDSuUQjp" alt="Lamborghini">
         </td>
         <td class="row">
-          <img src="./images/mclaren-logo.jpg" alt="Mclaren">
+          <img src="https://drive.google.com/uc?export=view&id=1kKlnzbu9OHcRFih41uk8ng_8iGkEDMfe" alt="Mclaren">
         </td>
         <td class="row">
-          <img src="./images/mercedes-logo.jpg" alt="Mercedes">
+          <img src="https://drive.google.com/uc?export=view&id=1BmI9LB1APchsD912jQ1qwbchm-trGP1P" alt="Mercedes">
         </td>
         <td class="row">
-          <img src="./images/nio-logo.jpg" alt="Nio">
+          <img src="https://drive.google.com/uc?export=view&id=1w9OaT6GVOAqybcC7Y4HaG47oQd4uW6IO" alt="Nio">
         </td>
         <td class="row">
-          <img src="./images/porsche-logo.jpg" alt="Porsche">
+          <img src="https://drive.google.com/uc?export=view&id=1ZAT38mFbiv7eSRBTnvSBDBfX8Du2sOIA" alt="Porsche">
         </td>
         <td class="row">
-          <img src="./images/rimac-logo.jpg" alt="Rimac">
+          <img src="https://drive.google.com/uc?export=view&id=1EDLZLBxmp96E6g0Tcg9c_02mI3pLZW3z" alt="Rimac">
         </td>
         <td class="row">
-          <img src="./images/tesla-logo.jpg" alt="Tesla">
+          <img src="https://drive.google.com/uc?export=view&id=1DhN3Q13g1AkOmgOcvwbQgX7DbAE_km-0" alt="Tesla">
       </tr>
     </main>
     <footer class="page-footer red">
