--- a/ivan/week-2/home.html
+++ b/ivan/week-2/home.html
@@ -16,29 +16,63 @@
       <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper red">
-            <a href="home.html" class="brand-logo">Home</a>
-            <!-- TODO: makes more sense this to be the title of the website-->
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i>
+            <a href="home.html" class="brand-logo">
+              Home
+            </a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+              <i class="material-icons">
+                menu
+              </i>
               <ul class="right hide-on-med-and-down">
-                <!-- TODO: Find a way to visualize on the header on which page yoou are currently in -->
-                <li><a href="catalogue.html">Catalogue</a></li>
-                <!-- TODO: You have 4 HTML files but only 3 links - add the home one as well, and make sure that they are all the same in all pages-->
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact_me.html">Contact Me</a></li>
+                <li>
+                  <a href="catalogue.html">
+                   Catalogue
+                  </a>
+                </li>
+                <li>
+                  <a href="about.html">
+                    About
+                  </a>
+                </li>
+                <li>
+                  <a href="contact_me.html">
+                    Contact Me
+                  </a>
+                </li>
               </ul>
           </div>
         </nav>
       </div>
       <ul class="sidenav" id="mobile-demo">
-        <!-- TODO: You have 4 HTML files but only 3 links - add the home one as well, and make sure that they are all the same in all pages -->
-        <li><a href="catalogue.html">Catalogue</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact_me.html">Contact Me</a></li>
+        <li>
+          <a href="catalogue.html">
+            Catalogue
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            About
+          </a>
+        </li>
+        <h1>
+
+        </h1>
+        <li>
+          <a href="contact_me.html">
+            Contact Me
+        </a>
+        </li>
       </ul>
     </header>
     <main>
-      <h2>I present you the best hyper cars... <a href="catalogue.html">Catalogue</a></h1>
-        <img src="./images/koenigsegg-regera-background.jpg" alt="Agera One:1">
+      <h2>
+        I present you the best hyper cars... 
+        <a href="catalogue.html">
+          Catalogue
+        </a>
+        </h1>
+        <img
+        src="https://drive.google.com/uc?export=view&id=1CnJCnzpWXwkP-u22NlIhsbADt6qxBVOK" alt="Agera One:1">
         <h3>Koenigsegg!</h3>
     </main>
     <footer class="page-footer red">
@@ -48,13 +82,6 @@
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <!-- TODO:  The sidenav was not working since  you did not iimport JQuery. I have written the code you needed to import from the website ( which is javascript) to work - implement it in the rest of the project -->
-    <!-- <script>
-			$(document).ready(function () {
-				$('.sidenav').sidenav();
-			});
-		</script> -->
 
     <script>
       document.addEventListener('DOMContentLoaded', function () {
